# web-extensions

./: Cargo.toml  README.md
examples/omnibox/new-tab-search/: Cargo.toml  background.js  manifest.json
examples/omnibox/new-tab-search/src/: lib.rs
src/: bookmarks.rs  contextual_identities.rs  downloads.rs  error.rs  event_listener.rs  history.rs  lib.rs  omnibox.rs  tabs.rs  test_util.rs  util.rs
src/tabs/: mod.rs  muted_info.rs  on_activated.rs  on_attached.rs  on_created.rs  on_detached.rs  on_highlighted.rs  on_moved.rs  on_removed.rs  on_replaced.rs  on_updated.rs  on_zoom_change.rs  query_details.rs  status.rs  tab.rs  tests.rs  window_type.rs
tests/: contextual_identities.rs  node.rs  tabs.rs
tests/util/: mod.rs
