[package]
name = "web-extensions"
version = "0.1.0"
authors = [
  "Roman Volosatovs <rvolosatovs@riseup.net>",
  "Markus Kohlhase <markus.kohlhase@slowtec.de>",
]
edition = "2021"
description = "This crate provides wrappers around WebExtensions API"
repository = "https://github.com/rvolosatovs/web-extensions"
license = "MIT"
keywords = ["api", "serde", "wasm", "web", "webassembly"]
categories = ["api-bindings", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.59"
serde = { version = "1.0.142", features = ["derive"] }
serde_derive = "1.0.142"
serde_json = "1.0.83"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-extensions-sys = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.32"
