[package]
name = "web-extensions"
version = "0.3.0"
authors = [
  "Markus Kohlhase <markus.kohlhase@slowtec.de>",
  "Roman Volosatovs <rvolosatovs@riseup.net>",
]
edition = "2021"
description = "This crate provides wrappers around WebExtensions API"
repository = "https://github.com/rvolosatovs/web-extensions"
license = "MIT"
keywords = ["api", "serde", "wasm", "web", "webassembly"]
categories = ["api-bindings", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-utils = "0.1.5"
js-sys = "0.3.60"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-extensions-sys = "0.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[features]
default = []
firefox = []
