[package]
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"
name = "new-tab-search"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
gloo-console = "0.2"
gloo-utils = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.6", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = {version = "0.4", optional = true}

web-extensions = {version = "0.3", path = "../../.."}

[profile.release]
# Tell `rustc` to optimize for small code size.
codegen-units = 1
lto = true
opt-level = "s"
